--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 spring.profiles.active=h2
 logging.level.org.springframework.boot.context.embedded=INFO
 spring.jpa.database-platform=org.hibernate.dialect.Oracle10gDialect
+spring.h2.console.enabled=true
